# python-monorepo

./: .flake8  .gitignore  Makefile  README.md  dev-requirements.txt  pip-requirements.txt  requirements-tools.txt
libs/base/: README.md  pyproject.toml
libs/base/cyberlib/base/: __init__.py
libs/base/cyberlib_base/: __init__.py  arithmetic.py
libs/base/tests/: test_arithmetic.py
libs/fancy/: Makefile  README.md  pyproject.toml  requirements.txt
libs/fancy/cyberlib/fancy/: arithmetic.py
libs/fancy/cyberlib_fancy/: arithmetic.py
libs/fancy/tests/: test_arithmetic.py
